tests/rosetta/out/Fortran/array-length.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program array_length
  implicit none
    integer, dimension(3) :: arr
    character(len=100) :: s0
    character(len=100) :: s1
  call main()
  
  contains
  recursive subroutine main()
    arr = (/'apple','orange','pear'/)
    write(s0,'(G0)') arr
    write(s1,'(G0)') 3
    print *, trim(trim(trim('Length of ' // s0) // ' is ') // s1) // '.'
  end subroutine main
end program array_length
